Updated code for finding future lanes

--- a/Loyola-Supply-Chain-Analysis.ipynb
+++ b/Loyola-Supply-Chain-Analysis.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading in Data (Charlie):\n",
+    "## Loading in Data\n",
     "\n",
-    "Aarij will have to use different directories for his data."
+    "For Charlie's Directory"
    ]
   },
   {
@@ -60,6 +60,13 @@
    "outputs": [],
    "source": [
     "ShipperData=pd.read_excel(\"/Users/charlesmarshall/Desktop/Loyola-Supply-Chain-Competition/Loyola 2nd Annual Data Competition - Shipper Data Set (Trailing 2-Years).xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For Aarij's Directory"
    ]
   },
   {
@@ -269,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +296,7 @@
        "{'Atlanta', 'Chicago', 'Dallas', 'Los Angeles', 'Philadelphia', 'Seattle'}"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +307,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Atlanta', 'Chicago', 'Dallas', 'Los Angeles', 'Philadelphia', 'Seattle', nan}"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(ShipperData['Dest Market'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +345,7 @@
        " 'Truck'}"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +365,7 @@
        "{'Contract', 'Spot'}"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +385,7 @@
        "{'Ad-hoc', 'Consistent', 'Critical', 'Dedicated', 'Standard', 'White Glove'}"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,21 +420,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CHARLIE Q1 is not defined at this point"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 233,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'Q1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-9575c99bcfc8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Q1[ and Q1]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Origin Market'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m'Los Angeles'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mQ1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Dest Market'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m'Seattle'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'Q1' is not defined"
+     ]
     }
    ],
    "source": [
@@ -417,36 +452,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Categorizing the Future Lanes\n",
+    "Lane = []\n",
+    "org = list(ShipperData['Origin Market'])\n",
+    "dst = list(ShipperData['Dest Market'])\n",
+    "los = 'Los Angeles'\n",
+    "sea = 'Seattle'\n",
+    "dal = 'Dallas'\n",
+    "chi = 'Chicago'\n",
+    "atl = 'Atlanta'\n",
+    "phi = 'Philadelphia'\n",
+    "\n",
+    "futures = {}\n",
+    "futures[(los, sea)] = 'VLS'\n",
+    "futures[(sea, los)] = 'VSL'\n",
+    "futures[(los, dal)] = 'VLD'\n",
+    "futures[(dal, los)] = 'VDL'\n",
+    "futures[(chi, atl)] = 'VCA'\n",
+    "futures[(atl, phi)] = 'VAP'\n",
+    "futures[(phi, chi)] = 'VPC'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "Lane=[]\n",
-    "for i in range(len(ShipperData)):\n",
-    "    if ShipperData['Dest Market'].isna()[i]:\n",
-    "        Lane.append('Other')\n",
-    "    elif ((ShipperData['Origin Market']=='Los Angeles') & (ShipperData['Dest Market']=='Seattle'))[i]:\n",
-    "        Lane.append('VLS')\n",
-    "    elif ((ShipperData['Origin Market']=='Seattle') & (ShipperData['Dest Market']=='Los Angeles'))[i]:\n",
-    "        Lane.append('VSL')\n",
-    "    elif ((ShipperData['Origin Market']=='Los Angeles') & (ShipperData['Dest Market']=='Dallas'))[i]:\n",
-    "        Lane.append('VLD')\n",
-    "    elif ((ShipperData['Origin Market']=='Dallas') & (ShipperData['Dest Market']=='Los Angeles'))[i]:\n",
-    "        Lane.append('VDL')\n",
-    "    elif ((ShipperData['Origin Market']=='Chicago') & (ShipperData['Dest Market']=='Atlanta'))[i]:\n",
-    "        Lane.append('VCA')\n",
-    "    elif ((ShipperData['Origin Market']=='Atlanta') & (ShipperData['Dest Market']=='Philadelphia'))[i]:\n",
-    "        Lane.append('VAP')\n",
-    "    elif ((ShipperData['Origin Market']=='Philadelphia') & (ShipperData['Dest Market']=='Chicago'))[i]:\n",
-    "        Lane.append('VPC')\n",
+    "for i in range(len(org)):\n",
+    "    if (org[i], dst[i]) in futures:\n",
+    "        Lane.append(futures[(org[i], dst[i])])\n",
     "    else:\n",
     "        Lane.append('Other')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
-   "metadata": {},
+   "execution_count": 94,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "ShipperData['Lane'] = Lane"
@@ -454,8 +504,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
-   "metadata": {},
+   "execution_count": 95,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -632,7 +684,7 @@
        "4  Other  "
       ]
      },
-     "execution_count": 239,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,11 +736,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Shipper2019=ShipperData[ShipperData['Pickup Date'].dt.year == 2019]"
+    "Shipper2019=ShipperData[ShipperData['Pickup Date'].dt.year == 2019].copy()"
    ]
   },
   {
