--- a/ToDo
+++ b/ToDo
@@ -3,6 +3,7 @@ To DO:
 - Question 5 (Charlie)
 - Question 6 (Both)
 - Fix/research definition of "Truckload" for Q1
+- Preprocess for question 1, we need to decide how to deal with instances where revenue or mileage is zero/blank
 - Fix/research definintion of "volume for Q1b and Q2
 - Presentation
 - Report
