this shit is O(n^n)

--- a/Loyola-Supply-Chain-Analysis.ipynb
+++ b/Loyola-Supply-Chain-Analysis.ipynb
@@ -5275,42 +5275,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def macro_fn(timestamp,df):\n",
-    "    val = 0\n",
-    "    date = timestamp\n",
-    "    dates=list(df['data_timestamp'])\n",
-    "    dates.insert(0,date)\n",
-    "    dates.sort()\n",
-    "    index = dates.index(date)\n",
-    "    if index > 0:\n",
-    "        val = df['data_value'][index-1]\n",
+    "def macro_fn(Shipper_row):\n",
+    "    date = Shipper_row['Book Date']\n",
+    "    dates1=list(PPI['data_timestamp'])\n",
+    "    dates1.insert(0,date)\n",
+    "    dates1.sort()\n",
+    "    index1 = dates1.index(date)\n",
+    "    \n",
+    "    dates2=list(ISM['data_timestamp'])\n",
+    "    dates2.insert(0,date)\n",
+    "    dates2.sort()\n",
+    "    index2 = dates2.index(date)\n",
+    "    \n",
+    "    if index1 > 0 and index2 > 0:\n",
+    "        ism=ISM['data_value'][index2-1]\n",
+    "        ipro_usa=IPRO_USA['data_value'][index2-1]\n",
+    "        ipro_fbevt=IPRO_FBEVT['data_value'][index2-1]\n",
+    "        ppi=PPI['data_value'][index1-1]\n",
+    "        cosp=COSP['data_value'][index1-1]\n",
+    "        reslg=RESLG['data_value'][index2-1]\n",
+    "        orders=ORDERS['data_value'][index1-1]\n",
+    "    elif index1 > 0 and index2 == 0:\n",
+    "        ism=0\n",
+    "        ipro_usa=0\n",
+    "        ipro_fbevt=0\n",
+    "        ppi=PPI['data_value'][index1-1]\n",
+    "        cosp=COSP['data_value'][index1-1]\n",
+    "        reslg=0\n",
+    "        orders=ORDERS['data_value'][index1-1]\n",
+    "    elif index1 == 0 and index2 > 0:\n",
+    "        ism=ISM['data_value'][index2-1]\n",
+    "        ipro_usa=IPRO_USA['data_value'][index2-1]\n",
+    "        ipro_fbevt=IPRO_FBEVT['data_value'][index2-1]\n",
+    "        ppi=0\n",
+    "        cosp=0\n",
+    "        reslg=RESLG['data_value'][index2-1]\n",
+    "        orders=0\n",
     "    else:\n",
-    "        val = np.nan\n",
-    "    return val"
+    "        ism=0\n",
+    "        ipro_usa=0\n",
+    "        ipro_fbevt=0\n",
+    "        ppi=0\n",
+    "        cosp=0\n",
+    "        reslg=0\n",
+    "        orders=0\n",
+    "    \n",
+    "    return ism,ipro_usa,ipro_fbevt,ppi,cosp,reslg,orders;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "33071.0"
+       "(60.7, 106.64, 110.52, 143.5, 577315.0, 4.78, 33071.0)"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "macro_fn(ShipperData['Book Date'][100],ORDERS)"
+    "macro_fn(Q5.loc[100])"
    ]
   },
   {
@@ -5431,6 +5465,224 @@
    ],
    "source": [
     "micro_lane_fn(Q5.loc[10],DATVF_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Load Number</th>\n",
+       "      <th>Book Date</th>\n",
+       "      <th>Origin Market</th>\n",
+       "      <th>3-Digit Origin #</th>\n",
+       "      <th>Dest Market</th>\n",
+       "      <th>3-Digit Dest #</th>\n",
+       "      <th>Mode</th>\n",
+       "      <th>Mileage</th>\n",
+       "      <th>Spot/Contract</th>\n",
+       "      <th>Accessorial Cost</th>\n",
+       "      <th>Load Type</th>\n",
+       "      <th>Lane</th>\n",
+       "      <th>RPM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1280</td>\n",
+       "      <td>2018-02-15</td>\n",
+       "      <td>LAX</td>\n",
+       "      <td>906</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>554</td>\n",
+       "      <td>Dry Van</td>\n",
+       "      <td>3816</td>\n",
+       "      <td>Spot</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ad-hoc</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>0.934958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1282</td>\n",
+       "      <td>2018-02-15</td>\n",
+       "      <td>CHI</td>\n",
+       "      <td>601</td>\n",
+       "      <td>CHI</td>\n",
+       "      <td>606</td>\n",
+       "      <td>Dry Van</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Spot</td>\n",
+       "      <td>-42</td>\n",
+       "      <td>Ad-hoc</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>4.236458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1340</td>\n",
+       "      <td>2018-02-16</td>\n",
+       "      <td>CHI</td>\n",
+       "      <td>606</td>\n",
+       "      <td>CHI</td>\n",
+       "      <td>607</td>\n",
+       "      <td>Dry Van</td>\n",
+       "      <td>42</td>\n",
+       "      <td>Spot</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Dedicated</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>8.187619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1397</td>\n",
+       "      <td>2018-02-19</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>761</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>761</td>\n",
+       "      <td>Dry Van</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Spot</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Consistent</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>5.191167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1398</td>\n",
+       "      <td>2018-02-21</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>761</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>761</td>\n",
+       "      <td>Dry Van</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Spot</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ad-hoc</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>5.191167</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Load Number  Book Date Origin Market  3-Digit Origin # Dest Market  \\\n",
+       "0         1280 2018-02-15           LAX               906         NaN   \n",
+       "1         1282 2018-02-15           CHI               601         CHI   \n",
+       "2         1340 2018-02-16           CHI               606         CHI   \n",
+       "3         1397 2018-02-19           DAL               761         DAL   \n",
+       "4         1398 2018-02-21           DAL               761         DAL   \n",
+       "\n",
+       "  3-Digit Dest #     Mode Mileage Spot/Contract  Accessorial Cost   Load Type  \\\n",
+       "0            554  Dry Van    3816          Spot                 0      Ad-hoc   \n",
+       "1            606  Dry Van      48          Spot               -42      Ad-hoc   \n",
+       "2            607  Dry Van      42          Spot                 0   Dedicated   \n",
+       "3            761  Dry Van      60          Spot                 0  Consistent   \n",
+       "4            761  Dry Van      60          Spot                 0      Ad-hoc   \n",
+       "\n",
+       "    Lane       RPM  \n",
+       "0  Other  0.934958  \n",
+       "1  Other  4.236458  \n",
+       "2  Other  8.187619  \n",
+       "3  Other  5.191167  \n",
+       "4  Other  5.191167  "
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q5.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pred_df(df):\n",
+    "    pred_df=[]\n",
+    "    rates=df['RPM']\n",
+    "    for i in range(len(df)):\n",
+    "        macro = macro_fn(df.loc[i])\n",
+    "        ism=macro[0]\n",
+    "        ipro_usa=macro[1]\n",
+    "        ipro_fbevt=macro[2]\n",
+    "        ppi=macro[3]\n",
+    "        cosp=macro[4]\n",
+    "        reslg=macro[5]\n",
+    "        orders=macro[6]\n",
+    "                   \n",
+    "        otvi=micro_loc_fn(df.loc[i],OTVI_value)\n",
+    "        otri=micro_loc_fn(df.loc[i],OTRI_value)\n",
+    "        haul=micro_loc_fn(df.loc[i],HAUL_value)\n",
+    "        tlt=micro_loc_fn(df.loc[i],TLT_value)\n",
+    "        dts=micro_loc_fn(df.loc[i],DTS_value)\n",
+    "        cstm=micro_loc_fn(df.loc[i],CSTM_value)\n",
+    "                   \n",
+    "        datvf=micro_lane_fn(df.loc[i],DATVF_value)\n",
+    "        orail53l=micro_lane_fn(df.loc[i],ORAIL53L_value)\n",
+    "        intrm=micro_lane_fn(df.loc[i],INTRM_value)\n",
+    "    \n",
+    "    return pred_df.append([i,ism,ipro_usa,ipro_fbevt,ppi,cosp,reslg,orders,otvi,otri,haul,tlt,dts,cstm,datvf,orail53l,intrm,rates[i]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-213-ca09fa87075f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpred_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-209-9e42aa4013b1>\u001b[0m in \u001b[0;36mpred_df\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0motvi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmicro_loc_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mOTVI_value\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0motri\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmicro_loc_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mOTRI_value\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0mhaul\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmicro_loc_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mHAUL_value\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m         \u001b[0mtlt\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmicro_loc_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mTLT_value\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mdts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmicro_loc_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mDTS_value\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-177-9cc447b0e9c7>\u001b[0m in \u001b[0;36mmicro_loc_fn\u001b[0;34m(Shipper_row, micro_df)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mdate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mShipper_row\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Book Date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mloc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mShipper_row\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Origin Market'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mdates\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmicro_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmicro_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'granularity1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'data_timestamp'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mdates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mdates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/ops.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(self, other, axis)\u001b[0m\n\u001b[1;32m   1764\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1765\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrstate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ignore'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1766\u001b[0;31m                 \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mna_op\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1767\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1768\u001b[0m                 raise TypeError('Could not compare {typ} type with Series'\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/ops.py\u001b[0m in \u001b[0;36mna_op\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m   1620\u001b[0m         \u001b[0;31m# Checking that cases that were once handled here are no longer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1621\u001b[0m         \u001b[0;31m# reachable.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1622\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mis_categorical_dtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1623\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1624\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_object_dtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/dtypes/common.py\u001b[0m in \u001b[0;36mis_categorical_dtype\u001b[0;34m(arr_or_dtype)\u001b[0m\n\u001b[1;32m    600\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0marr_or_dtype\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    601\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 602\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mCategoricalDtype\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_dtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr_or_dtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    603\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    604\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/dtypes/base.py\u001b[0m in \u001b[0;36mis_dtype\u001b[0;34m(cls, dtype)\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m         if isinstance(dtype, (ABCSeries, ABCIndexClass,\n\u001b[0;32m--> 101\u001b[0;31m                               ABCDataFrame, np.dtype)):\n\u001b[0m\u001b[1;32m    102\u001b[0m             \u001b[0;31m# https://github.com/pandas-dev/pandas/issues/22960\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m             \u001b[0;31m# avoid passing data to `construct_from_string`. This could\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "pred_df(Q5)"
    ]
   },
   {
